Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -440,3 +440,4 @@ Temporary commit content 2854
 Temporary commit content 2879
 Temporary commit content 2893
 Temporary commit content 2897
+Temporary commit content 2910
