Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -437,3 +437,4 @@ Temporary commit content 2798
 Temporary commit content 2820
 Temporary commit content 2830
 Temporary commit content 2854
+Temporary commit content 2879
