Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -449,3 +449,4 @@ Temporary commit content 2949
 Temporary commit content 2955
 Temporary commit content 2965
 Temporary commit content 2971
+Temporary commit content 2989
