Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -435,3 +435,4 @@ Temporary commit content 2794
 Temporary commit content 2797
 Temporary commit content 2798
 Temporary commit content 2820
+Temporary commit content 2830
