Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -429,3 +429,4 @@ Temporary commit content 2704
 Temporary commit content 2744
 Temporary commit content 2750
 Temporary commit content 2753
+Temporary commit content 2758
