Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -432,3 +432,4 @@ Temporary commit content 2753
 Temporary commit content 2758
 Temporary commit content 2761
 Temporary commit content 2794
+Temporary commit content 2797
