Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -433,3 +433,4 @@ Temporary commit content 2758
 Temporary commit content 2761
 Temporary commit content 2794
 Temporary commit content 2797
+Temporary commit content 2798
