Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -448,3 +448,4 @@ Temporary commit content 2935
 Temporary commit content 2949
 Temporary commit content 2955
 Temporary commit content 2965
+Temporary commit content 2971
