Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -427,3 +427,4 @@ Temporary commit content 2678
 Temporary commit content 2692
 Temporary commit content 2704
 Temporary commit content 2744
+Temporary commit content 2750
