Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -439,3 +439,4 @@ Temporary commit content 2830
 Temporary commit content 2854
 Temporary commit content 2879
 Temporary commit content 2893
+Temporary commit content 2897
